<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageChooseCard"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editTextTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/cardRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >

        <RadioButton
            android:id="@+id/cardRadioButtonLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/radio_button_text_low"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:padding="10dp"
            />

        <RadioButton
            android:id="@+id/cardRadioButtonMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:text="@string/radio_button_text_medium"
            android:checked="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:padding="10dp"
            />

        <RadioButton
            android:id="@+id/cardRadioButtonHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:text="@string/radio_button_text_high"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:padding="10dp"
            />

    </RadioGroup>

    <Button
        android:id="@+id/cardButtonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardRadioGroup"
        android:text="@string/card_text_save"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />

</LinearLayout>